<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="newPodcastActivityHeaderTitle">Новый подкаст</string>
    <string name="search">Поиск</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="main_btn">Добавить подкаст</string>
    <string name="attach_file">Загрузить файл</string>
    <string name="main_placeholder">Добавьте первый подкаст</string>
    <string name="sub_placeholder">Добавляйте, редактируйте и делитесь подкастами вашего сообщества.</string>

    <string name="new_podcast_activity_header_title">Новый подкаст</string>
    <string name="edit_header_title">Редактирование</string>
    <string name="music_selection_header_title">Выбрать музыку</string>

    <string name="edit_podcast_activity_timecodes_title">ТАЙМКОДЫ</string>
    <string name="edit_podcast_activity_add_timecode_button_text">Добавить таймкод</string>
    <string name="edit_podcast_activity_timecodes_explanation">Отметки времени с названием темы. Позволяют слушателям легче путешествовать по подкасту.</string>
    <string name="edit_podcast_activity_default_timecode_name">Начало обсуждения</string>
    <string name="edit_podcast_activity_default_timecode_time">05:41</string>

    <string name="choose_music_activity_default_track_name">All of the Lights</string>
    <string name="choose_music_activity_default_track_artist">Kanye West</string>
    <string name="choose_music_activity_default_track_duration">5:00</string>

    <string name="end_activity_title">Подкаст добавлен</string>
    <string name="end_activity_description">Расскажите своим подписчикам о новом подкасте, чтобы получить больше слушателей.</string>
    <string name="end_activity_description_button_text">Поделиться подкастом</string>
</resources>