<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.PodcastsActivity">


    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:elevation="0dp"
            app:elevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"

                android:elevation="0dp"
                android:theme="@style/ToolbarColoredBackArrow"
                app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar"
        />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp">

            <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/divider_bg" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
            android:id="@+id/noPodcastsMainTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_placeholder"
            android:textColor="@color/colorPlaceholder"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            app:lineHeight="20dp"
            tools:layout_editor_absoluteY="286dp" />

    <TextView
            android:id="@+id/noPodcastsMainSubtitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_placeholder"
            android:textColor="@color/colorPlaceholder"
            android:textSize="16dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noPodcastsMainTitleTextView"
    />

    <Button
            android:id="@+id/podcastCreateButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/btn_bg"
            android:elevation="0dp"
            android:includeFontPadding="false"
            android:onClick="onPodcastCreateButtonClicked"
            android:paddingLeft="16dp"
            android:paddingTop="0dp"
            android:paddingRight="16dp"
            android:paddingBottom="0dp"
            android:text="@string/main_btn"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryText"
            android:textSize="15sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noPodcastsMainSubtitleTextView"
            tools:text="@string/main_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>