<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBg"
    tools:context=".activity.PodcastsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:elevation="0dp"
            android:theme="@style/ToolbarColoredBackArrow"
            app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"></LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingEnd="32dp"
        android:paddingRight="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.498">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/checkmark" />

        <TextView
            android:id="@+id/noPodcastsMainTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto"
            android:fontWeight="600"
            android:text="@string/end_activity_title"
            android:textAlignment="center"
            android:textColor="@color/colorBlackText"
            android:textFontWeight="600"
            android:textSize="20dp"
            app:lineHeight="24dp" />

        <TextView
            android:id="@+id/noPodcastsMainSubtitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/roboto"
            android:letterSpacing="-0.02"
            android:text="@string/end_activity_description"
            android:textAlignment="center"
            android:textColor="@color/colorPlaceholder"
            android:textSize="16dp"
            app:lineHeight="20dp" />

        <Button
            android:id="@+id/podcastCreateButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="@drawable/btn_bg"
            android:elevation="0dp"
            android:fontFamily="@font/roboto"
            android:includeFontPadding="false"
            android:letterSpacing="-0.02"
            android:onClick="onPodcastCreateButtonClicked"
            android:paddingLeft="16dp"
            android:paddingTop="0dp"
            android:paddingRight="16dp"
            android:paddingBottom="0dp"
            android:text="@string/end_activity_description_button_text"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryText"
            android:textSize="15dp"
            tools:text="@string/end_activity_description_button_text" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>