<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBg"
    tools:context=".activity.EditActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:elevation="0dp"
        app:elevation="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/headerToolbar"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"

            app:navigationIcon="?attr/homeAsUpIndicator"
            app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar"
            android:theme="@style/ToolbarColoredBackArrow"
            app:title="@string/edit_header_title"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/divider_bg" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/musicPlayerWithControlsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/media_player_bg"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <!--<Space
            android:layout_width="match_parent"
            android:layout_height="122dp" />-->
        <com.masoudss.lib.WaveformSeekBar
            android:id="@+id/waveformSeekBar"


            android:layout_width="match_parent"
            android:layout_height="122dp"
            android:background="@drawable/media_player_wave_bg"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            app:wave_background_color="#4D3F8AE0"
            app:wave_corner_radius="2dp"
            app:wave_gap="2dp"
            app:wave_gravity="center"
            app:wave_min_height="5dp"
            app:wave_progress="0"
            app:wave_progress_color="@color/waveFormProgressColor"
            app:wave_width="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageButton
                android:id="@+id/playStopButton"

                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_weight="0"
                android:background="@drawable/btn_icon_light_bg"
                android:onClick="onPlayStopButtonClick"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingTop="12dp"
                android:paddingEnd="1dp"
                android:paddingRight="11dp"
                android:paddingBottom="12dp"
                android:scaleType="fitStart"

                app:srcCompat="@drawable/play" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/cutButton"
                    android:layout_width="44dp"

                    android:layout_height="44dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/btn_icon_light_bg"
                    android:onClick="onCutButtonClick"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/scissors" />

                <ImageButton
                    android:id="@+id/rollbackButton"
                    android:layout_width="44dp"

                    android:layout_height="44dp"
                    android:background="@drawable/btn_icon_light_bg"
                    android:onClick="onRollbackButtonClick"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/revert" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/musicButton"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/btn_icon_light_bg"
                    android:onClick="onMusicButtonClick"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/music" />

                <ImageButton
                    android:id="@+id/fadeInButton"
                    android:layout_width="44dp"

                    android:layout_height="44dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/btn_icon_light_bg"
                    android:onClick="onFadeInButtonClick"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/bar_chart_1" />

                <ImageButton
                    android:id="@+id/fadeOutButton"
                    android:layout_width="44dp"

                    android:layout_height="44dp"
                    android:background="@drawable/btn_icon_light_bg"
                    android:onClick="onFadeOutButtonClick"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/bar_chart_2" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/timecodesScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musicPlayerWithControlsLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="11dp"
            android:paddingBottom="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="9dp"
                android:fontFamily="@font/roboto"
                android:fontWeight="500"
                android:letterSpacing="0.02"
                android:text="@string/edit_podcast_activity_timecodes_title"
                android:textAllCaps="true"
                android:textColor="@color/colorPlaceholder"
                android:textFontWeight="500"
                android:textSize="13dp"
                app:lineHeight="16dp" />

            <LinearLayout
                android:id="@+id/timecodesContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:onClick="onNewTimeCodeClick"
                    android:paddingStart="4dp"
                    android:paddingLeft="4dp"
                    android:paddingTop="14dp"
                    android:paddingBottom="14dp">

                    <ImageButton
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="0"
                        android:background="@android:color/transparent"
                        android:scaleType="centerInside"
                        app:srcCompat="@drawable/plus" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:letterSpacing="0.01"
                        android:text="@string/edit_podcast_activity_add_timecode_button_text"
                        android:textColor="@color/colorSecondary"
                        android:textSize="16dp"
                        app:lineHeight="20dp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:letterSpacing="0.02"
                    android:text="@string/edit_podcast_activity_timecodes_explanation"
                    android:textColor="@color/colorPlaceholder"
                    android:textSize="13dp"
                    app:lineHeight="16dp" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
